estamos re curados, no se que pija hice aca

--- a/es/fotografia/agricultura.html
+++ b/es/fotografia/agricultura.html
@@ -144,8 +144,8 @@
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Comunidades en Jáchal, San Juan</h1>
+				<p class="texto text-bio">Lugareños amantes de la tierra, nucleados en cooperativas, apuestan a estos cultivos que potencian el rendimiento económico de las fincas.</p>
 			</div>
 		</div>
 	</div>
@@ -153,74 +153,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-01.jpg" class="img-fluid" alt="Campos de cebolla, Jáchal, San Juan<">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Campos de cebolla, Jáchal, San Juan</h2>
+				<p class="texto">Plantación de cebolla, uno de los principales cultivos de la región.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Parrales en Pocito, San Juan</h2>
+				<p class="texto">San Juan se convierte en una oportunidad única para adentrarse en el universo del vino y su elaboración, recorriendo las bodegas y cavas situadas en los departamentos del sur, este y oeste.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-02.jpg" class="img-fluid" alt="Parrales en Pocito, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-03.jpg" class="img-fluid" alt="Parrales en Zonda, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Parrales en Zonda, San Juan</h2>
+				<p class="texto">Zonda se caracteriza por su intensa e histórica actividad agrícola y una moderna y ágil actividad industrial.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Parrales en Zonda, San Juan</h2>
+				<p class="texto">Junto al Valle de Tulum y Ullum, Zonda se erige como centro vital y asiento del desarrollo económico local.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-04.jpg" class="img-fluid" alt="Parrales en Zonda, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-05.jpg" class="img-fluid" alt="Olivos en Sarmiento, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Olivos en Sarmiento, San Juan</h2>
+				<p class="texto">Los olivos característicos del Cuyo crecen al pie de los Andes desde hace más de cuatro siglos. La olivicultura es la segunda actividad productiva de la provincia, seguida de la vitivinícola.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Viñedos en Valle de Pedernal, San Juan</h2>
+				<p class="texto">Se destaca por ser el terruño sanjuanino con más potencial, a más de 1300 metros sobre el nivel del mar.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-06.jpg" class="img-fluid" alt="Viñedos en Valle de Pedernal, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-07.jpg" class="img-fluid" alt="Planta de aceite en Las Casuarinas, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Planta de aceite en Las Casuarinas, San Juan</h2>
+				<p class="texto">Ésta fábrica pertenece a SolFrut, del Grupo Phrónesis, un grupo de empresas íntimamente comprometidas con el desarrollo regional sustentable.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Plantaciones en Zonda, San Juan</h2>
+				<p class="texto">Parte de un oasis artificial, resultado de un complejo sistema de riego, cuyo sustento principal son las aguas de los ríos y vertientes de montaña.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-AGRICULTURA-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-AGRICULTURA-08.jpg" class="img-fluid" alt="Plantaciones en Zonda, San Juan">
 			</div>
 		</div>
 	</div>
@@ -336,7 +336,16 @@
 		</div>
 	</footer>
 
-
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Fotografía / Agricultura</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
