--- a/es/fotografia/cruce.html
+++ b/es/fotografia/cruce.html
@@ -144,8 +144,8 @@
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Cerro Aconcagua, Mendoza</h1>
+				<p class="texto text-bio">Visto desde la cumbre del cordón del Espinacito, este cerro se encuentra a 6.962 m.s.n.m.</p>
 			</div>
 		</div>
 	</div>
@@ -153,74 +153,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-01.jpg" class="img-fluid" alt="Subida al cordón del Espinacito, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Subida al cordón del Espinacito, San Juan</h2>
+				<p class="texto">Está ubicado a 4.536 m.s.n.m., es el punto más elevado del camino Los Patos.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Río Blanco, San Juan</h2>
+				<p class="texto">Nace en el deshielo de la cordillera de los Andes, desemboca en el río de los Patos; que junto al río de los Patos Sur, son sus principales afluentes.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-02.jpg" class="img-fluid" alt="Río Blanco, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-03.jpg" class="img-fluid" alt="Bajada hacia el Río Rocín, Chile">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Bajada hacia el Río Rocín, Chile</h2>
+				<p class="texto">Hoy es conocido como El Aletón. Es oscuro, muy encajonado y pedregoso. Sus faldas son paradas e interrumpidas por derrumbes.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Valle de Los Patos y río La Honda. San Juan, Argentina.</h2>
+				<p class="texto">Este escenario fue parte de la 11ª Jornada de la marcha prevista por San Martín.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-04.jpg" class="img-fluid" alt="Valle de Los Patos y río La Honda. San Juan, Argentina.">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-05.jpg" class="img-fluid" alt="Subida a la Quebrada Honda, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Subida a la Quebrada Honda, San Juan</h2>
+				<p class="texto">Todos los años miles de personas reviven la hazaña de San Martín, atravesando la Cordillera de Los Andes en mulas a 4.800 metros de altura.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Cordillera del Tigre, San Juan y Mendoza</h2>
+				<p class="texto">Forma parte de la Cordillera Frontal que es paralela a la Cordillera Principal, y se extiende por unos 100 km en dirección norte-sur al este del Aconcagua y paralela al valle de las Vacas.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-06.jpg" class="img-fluid" alt="Cordillera del Tigre, San Juan y Mendoza">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-07.jpg" class="img-fluid" alt="Mula carguera">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Mula carguera</h2>
+				<p class="texto">Esta mula perteneciente a los crianceros chilenos transporta el queso en albardas.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Arreo de mulares, San Juan</h2>
+				<p class="texto">Pasturas naturales en el Valle de Los Patos Sur.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-08.jpg" class="img-fluid" alt="Arreo de mulares, San Juan">
 			</div>
 		</div>
 	</div>
@@ -336,7 +336,16 @@
 		</div>
 	</footer>
 
-
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Fotografía / Cruce de Los Andes</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
