--- a/es/fotografia/extremo.html
+++ b/es/fotografia/extremo.html
@@ -144,8 +144,8 @@
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Glaciar Perito Moreno, Santa Cruz</h1>
+				<p class="texto text-bio">La extensa variedad de ecosistemas y áreas naturales de esta región se adecua a la perfección a las distintas disciplinas que conforman el Turismo de Aventura.</p>
 			</div>
 		</div>
 	</div>
@@ -153,11 +153,11 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-01.jpg" class="img-fluid" alt="Glaciar Perito Moreno, Santa Cruz">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Glaciar Perito Moreno, Santa Cruz</h2>
+				<p class="texto">La producción se montó sobre esta gruesa masa de hielo ubicada en el departamento Lago Argentino de la provincia de Santa Cruz</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
@@ -171,74 +171,74 @@
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-03.jpg" class="img-fluid" alt="Cerro Catedral, Río Negro">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Cerro Catedral, Río Negro</h2>
+				<p class="texto">Ubicado en Bariloche, es el centro de esquí más grande de Sudamérica y del Hemisferio Sur.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Kayak en Río San Juan, Ullum, San Juan</h2>
+				<p class="texto">Este deporte se practica en medio de un paisaje que mezcla el vértigo de sus ríos con los cerros que la rodean.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-04.jpg" class="img-fluid" alt="Kayak en Río San Juan, Ullum, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-05.jpg" class="img-fluid" alt="Rafting en Calingasta, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Rafting en Calingasta, San Juan</h2>
+				<p class="texto">El cañón del Río Los Patos ofrece un paisaje incomparable para realizar esta actividad de aventura. El agua templada, el sol sanjuanino y el avistaje del pato de los torrentes completan la experiencia de deporte y adrenalina.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Windsurf en Dique Cuesta del Viento, San Juan</h2>
+				<p class="texto">Los vientos de más de 110 km/h se forman gracias a una especie de embudo que se forma justo donde ingresan las corrientes de aire en el valle, lo que lo hace el lugar perfecto para este deporte.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-06.jpg" class="img-fluid" alt="Windsurf en Dique Cuesta del Viento, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-07.jpg" class="img-fluid" alt="Triatlón en Dique de Ullum, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Triatlón en Dique de Ullum, San Juan</h2>
+				<p class="texto">Esta competencia reconocida a nivel internacional se realiza anualmente, y comprende las disciplinas de natación, ciclismo y running.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Escalada en Bariloche, Río Negro</h2>
+				<p class="texto">Es un desafío superar las dificultades que las paredes nos ofrecen para llegar a una cumbre o hacer una vía, y ver desde arriba los paisajes panorámicos de Bariloche.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-08.jpg" class="img-fluid" alt="Escalada en Bariloche, Río Negro">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-09.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-09.jpg" class="img-fluid" alt="Motocross en las montañas de Ullum">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Motocross en las montañas de Ullum</h2>
+				<p class="texto">Con pilotos convocados de todo el país, se realizan periódicamente las competencias de motocross y enduro que hacen rugir las montañas de este departamento.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Mountain bike en Iglesia, San Juan</h2>
+				<p class="texto">Solos o en grupo, es uno de los deportes más elegidos por los sanjuaninos, gracias a que la provincia nos ofrece una amplia variedad de paisajes que dejan experiencias únicas de esta aventura.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-EXTREMO-10.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-EXTREMO-10.jpg" class="img-fluid" alt="Mountain bike en Iglesia, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
@@ -246,8 +246,8 @@
 				<img src="../../img/FOTOGRAFIA-EXTREMO-11.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Circuito Dakar en Mogna, San Juan</h2>
+				<p class="texto">Generalmente San Juan forma parte de los escenarios elegidos por esta carrera de gran prestigio internacional.</p>
 			</div>
 		</div>
 	</div>
@@ -363,7 +363,16 @@
 		</div>
 	</footer>
 
-
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Fotografía / Extremo</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
