--- a/es/fotografia/retrato.html
+++ b/es/fotografia/retrato.html
@@ -144,8 +144,8 @@
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Agricultor de Jáchal</h1>
+				<p class="texto text-bio">Forma parte de la estancia Punta del Agua, 400.000 ha de superficie, ubicada al Sur de la Ruta Nacional 150.</p>
 			</div>
 		</div>
 	</div>
@@ -153,74 +153,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-RETRATO-01.jpg" class="img-fluid" alt="Gaucho de Los Patos Norte">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Gaucho de Los Patos Norte</h2>
+				<p class="texto">En la Región de Coquimbo alrededor de 6.500 pobladores se dedican a la cría de cabras.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Gaucho oriundo de Calderón</h2>
+				<p class="texto">Dueños y cuidadores de su propio ganado, son productores primarios de quesos, algunos también agricultores, otros eventualmente mineros.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-RETRATO-02.jpg" class="img-fluid" alt="Gaucho oriundo de Calderón">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-RETRATO-03.jpg" class="img-fluid" alt="Criancero de Los Azules">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Criancero de Los Azules</h2>
+				<p class="texto">Herederos de los saberes de generaciones que los precedieron en la práctica del pastoreo trashumante característico de la ganadería de las geografías semiáridas.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Criancera de Los Valles del Norte</h2>
+				<p class="texto">La mujer cumple un rol importante en la criancería de cabras en Chile. Muchas de ellas, con sus niños a cuestas, acompañan a sus hombres a la cordillera y trabajan de sol a sol en la producción y venta del queso.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-RETRATO-04.jpg" class="img-fluid" alt="Criancera de Los Valles del Norte">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-RETRATO-05.jpg" class="img-fluid" alt="Juan Gustavo Tapia">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Juan Gustavo Tapia</h2>
+				<p class="texto">A pesar de su dura historia de vida, Juan Gustavo trabaja junto a su hermano, quien define como su compañero y juntos arrían 300 cabras.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Gaucho de San Agustín</h2>
+				<p class="texto">Por décadas las familias crianceras han sobrevivido sin ayuda oficial, sosteniendo un régimen de subsistencia basado en la producción de su propio alimento y en el trueque.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-RETRATO-06.jpg" class="img-fluid" alt="Gaucho de San Agustín">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-RETRATO-07.jpg" class="img-fluid" alt="Gaucha de Bella Vista, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Gaucha de Bella Vista, San Juan</h2>
+				<p class="texto">Presente en la Fiesta Provincial de Los Valles y Cumbres Iglesianos, evento típico de la zona.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Gaucho Iglesiano, San Juan</h2>
+				<p class="texto">Históricamente el gaucho era el habitante vagabundo de las pampas, que viajaba sin rumbo fijo en su caballo; con boleadoras, poncho, lazo, cuchillo yerba mate, sal y tabaco como único equipaje.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-RETRATO-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-RETRATO-08.jpg" class="img-fluid" alt="Gaucho Iglesiano, San Juan">
 			</div>
 		</div>
 	</div>
@@ -336,7 +336,16 @@
 		</div>
 	</footer>
 
-
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Fotografía / Retrato</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
