--- a/es/diseno/digital.html
+++ b/es/diseno/digital.html
@@ -89,7 +89,7 @@
 					        	<a class="dropdown-item" href="../fotografia/retrato.html">Retrato</a>
 					        	<a class="dropdown-item" href="../fotografia/producciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="../fotografia/agricultura.html">Agricultura</a>
-					        	<a class="dropdown-item" href="#">Cruce de Los Andes</a>
+					        	<a class="dropdown-item" href="../fotografia/cruce.html">Cruce de Los Andes</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
