--- a/es/fotografia/institucional.html
+++ b/es/fotografia/institucional.html
@@ -344,7 +344,16 @@
 		</div>
 	</footer>
 
-
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Fotografía / Institucional</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
